--- a/app/src/main/res/layout/activity_enter_otp.xml
+++ b/app/src/main/res/layout/activity_enter_otp.xml
@@ -71,22 +71,25 @@
         android:layout_gravity="center"
         android:gravity="center"
         >
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+91-"
+            android:text="+91 "
+            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
+            android:textColor="@color/black"
             android:textSize="22dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+            android:textStyle="bold" />
+
         <TextView
+            android:id="@+id/phone_Number_otp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
             android:text="1234567890"
-            android:textSize="22dp"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:id="@+id/phone_Number_otp"/>
+            android:textSize="22dp"
+            android:textStyle="bold" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -96,7 +99,7 @@
         android:orientation="horizontal"
 
         android:layout_below="@+id/phonen">
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:gravity="center"
             android:id="@+id/code1"
             android:layout_width="40dp"
@@ -110,7 +113,7 @@
             android:textStyle="bold"
             tools:ignore="LabelFor"/>
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:gravity="center"
             android:id="@+id/code2"
             android:layout_width="40dp"
@@ -124,7 +127,7 @@
             android:textStyle="bold"
             tools:ignore="LabelFor"/>
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:gravity="center"
             android:id="@+id/code3"
             android:layout_width="40dp"
@@ -138,7 +141,7 @@
             android:textStyle="bold"
             tools:ignore="LabelFor"/>
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:gravity="center"
             android:id="@+id/code4"
             android:layout_width="40dp"
@@ -166,17 +169,16 @@
             android:text="Didn't receive the OTP?"/>
         <!--        android text main string bhi laga sakte hain-->
 
-        <TextView
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="10dp"
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/resend_otp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
+            android:layout_margin="4dp"
+            android:layout_marginVertical="8dp"
             android:gravity="center"
             android:text="Resend OTP"
             android:textAllCaps="false"
-            android:textColor="@color/purple_500"
+            android:textColor="@color/deep_purple_400"
             android:visibility="visible" />
 
     </LinearLayout>
@@ -187,7 +189,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@color/teal_200"
+        android:backgroundTint="@color/teal_A700"
         android:text="Submit"
         app:cornerRadius="20dp" />
 
