--- a/app/src/main/res/layout/address_card.xml
+++ b/app/src/main/res/layout/address_card.xml
@@ -1,74 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/address_1"
+    style="@style/Widget.MaterialComponents.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/address_1"
+    app:strokeColor="@color/material_on_surface_stroke"
+    app:strokeWidth="1dp"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="15dp"
+    app:cardElevation="0dp">
 
-        app:cardElevation="20dp"
-        app:cardCornerRadius="25dp"
-        android:layout_margin="15dp"
-        >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linearLayout5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8sp">
+
         <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/linearLayout6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20sp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/address_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:paddingLeft="8dp"
-                    android:text="Jane Doe"
-                    android:layout_weight="1"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
-
-                <Button
-                    android:id="@+id/editaddress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:backgroundTint="@color/white"
-                    android:text="Edit"
-                    android:textColor="@color/teal_200"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/address_line1"
+                android:id="@+id/address_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="3 Newbridge court"
-                android:textSize="18dp" />
+                android:layout_weight="1"
+                android:gravity="start"
+                android:paddingLeft="8dp"
+                android:text="Jane Doe"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/address_line2"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/editaddress"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="Chino Hills,CA 91709, United States"
-                android:textSize="18dp" />
-
-            <CheckBox
-                android:id="@+id/defaultaddress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:checked="true"
-                android:text="Use as shipping address" />
+                android:layout_margin="2dp"
+                android:text="Edit"
+                android:textColor="@color/teal_200"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/address_line1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="3 Newbridge court"
+            android:textSize="18dp"
+            app:layout_constraintBottom_toTopOf="@+id/address_line2"
+            app:layout_constraintStart_toStartOf="@+id/linearLayout6"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/address_line2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:padding="5dp"
+            android:text="Chino Hills,CA 91709,"
+            android:textSize="18dp"
+            app:layout_constraintBottom_toTopOf="@+id/defaultaddress"
+            app:layout_constraintStart_toStartOf="@+id/address_line1"
+            app:layout_constraintTop_toBottomOf="@+id/address_line1" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/pincode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="pincode"
+            android:textSize="18dp"
+            app:layout_constraintStart_toEndOf="@+id/address_line2"
+            app:layout_constraintTop_toBottomOf="@+id/address_line1" />
+
+        <CheckBox
+            android:id="@+id/defaultaddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:padding="5dp"
+            android:text="Use as shipping address"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/address_line2"
+            app:layout_constraintTop_toBottomOf="@+id/address_line2" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.google.android.material.card.MaterialCardView>
