--- a/app/src/main/res/layout/fragment_edit_address.xml
+++ b/app/src/main/res/layout/fragment_edit_address.xml
@@ -88,6 +88,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_regular"
+                            android:inputType="textPersonName"
                             android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -127,6 +128,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_regular"
+                            android:inputType="textPostalAddress"
                             android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -145,27 +147,56 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_regular"
+                            android:inputType="textPostalAddress"
                             android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:hint="Address Line 3"
-                        app:boxStrokeColor="@color/teal_200"
-                        app:hintTextColor="@color/teal_200">
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/addressLine3"
+                        <com.google.android.material.textfield.TextInputLayout
+                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_regular"
-                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:hint="State"
+                            app:boxStrokeColor="@color/teal_200"
+                            app:hintTextColor="@color/teal_200">
 
-                    </com.google.android.material.textfield.TextInputLayout>
+
+                            <AutoCompleteTextView
+                                android:id="@+id/statedropmenu"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:dropDownWidth="wrap_content"
+                                android:dropDownHeight="wrap_content"
+                                android:inputType="none|textAutoComplete" />
+                        </com.google.android.material.textfield.TextInputLayout>
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:hint="City"
+                            app:boxStrokeColor="@color/teal_200"
+                            app:hintTextColor="@color/teal_200">
+
+
+                            <AutoCompleteTextView
+                                android:id="@+id/citydropmenu"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:inputType="none|textAutoComplete" />
+                        </com.google.android.material.textfield.TextInputLayout>
+
+
+                    </LinearLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -212,7 +243,7 @@
         android:text="Save"
         android:textColor="@android:color/black"
         android:textSize="20sp"
-        app:backgroundTint="@color/teal_200"
+        app:backgroundTint="@color/teal_A400"
         app:cornerRadius="20dp" />
 
 
