--- a/app/src/main/res/layout/fragment_product_card.xml
+++ b/app/src/main/res/layout/fragment_product_card.xml
@@ -61,47 +61,58 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.button.MaterialButton
-                    style="?attr/materialButtonOutlinedStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Add to cart"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="@color/teal_200"
-                    android:visibility="visible"
-                    app:strokeColor="@color/teal_200" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <LinearLayout
-                    android:id="@+id/quantitybtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:orientation="horizontal"
-                    android:visibility="visible">
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/addtocartbtn"
+                        style="?attr/materialButtonOutlinedStyle"
+                        android:layout_width="137dp"
+                        android:layout_height="wrap_content"
+                        android:text="Add to cart"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/teal_200"
+                        android:visibility="visible"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:strokeColor="@color/teal_200" />
 
-
-                    <ImageButton
-                        android:id="@+id/minusbtn"
+                    <LinearLayout
+                        android:id="@+id/quantitybtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/ic_baseline_circle_24"
-                        android:src="@drawable/minus_24" />
+                        android:orientation="horizontal"
+                        android:visibility="invisible"
+                        app:layout_constraintBottom_toBottomOf="@+id/addtocartbtn"
+                        app:layout_constraintEnd_toEndOf="@+id/addtocartbtn"
+                        app:layout_constraintStart_toStartOf="@+id/addtocartbtn"
+                        app:layout_constraintTop_toTopOf="@+id/addtocartbtn">
 
-                    <EditText
-                        android:id="@+id/quantitynumber"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ems="2"
-                        android:inputType="number"
-                        android:text="1" />
 
-                    <ImageButton
-                        android:id="@+id/addbtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_baseline_circle_24"
-                        android:src="@drawable/ic_baseline_add_24" />
-                </LinearLayout>
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/minusbtn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/minus_24"
+                            app:fabCustomSize="32dp" />
+
+                        <EditText
+                            android:id="@+id/quantitynumber"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:ems="2"
+                            android:gravity="center"
+                            android:inputType="number" />
+
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/addbtn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_baseline_add_24"
+                            app:fabCustomSize="32dp" />
+                    </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
         </LinearLayout>
